--- a/index.html
+++ b/index.html
@@ -113,16 +113,6 @@
                       <input class="form-check-input color_platte_layout_item bg-success" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
                       <label class="form-check-label" for="inlineRadio2"></label>
                     </div>
-                    
-                    <!-- <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off">
-                    <label class="btn shadow-none color_platte_layout_item bg-info" for="option1"></label>
-                    <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off">
-                    <label class="btn shadow-none color_platte_layout_item bg-dark" for="option2"></label>
-                    <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off">
-                    <label class="btn shadow-none color_platte_layout_item bg-secondary" for="option3"></label>
-                    <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off">
-                    <label class="btn shadow-none color_platte_layout_item bg-success" for="option4"></label> -->
-  
                   </div>
   
   
@@ -256,6 +246,68 @@
                 <a href="#" class=" btn btn-outline-light content__bar_preview_btn save px-4">
                   SAVE & MOVE TO CALENDER
                 </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col over_slide pt-4 border-top border-white border-1">
+            <div class="d-flex align-items-center justify-content-between">
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">COVER</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">Jan 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">mar 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">apr 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">may 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">jun 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">jul 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">aug 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">sep 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">oct 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">nov 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">dec 2023</div>
+              </div>
+              <div class="boxes">
+                <div class="box_img"></div>
+                <div class="box_text text-white h6 mb-0 py-2">blank</div>
               </div>
             </div>
           </div>
