--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@
               <div class="sider_bar_drop">
                 <div class="custom-select border border-1 border-dark rounded-1 mb-3">
                   <select>
-                    <option value="0">
+                    <!-- <option value="0">
                      Language
-                    </option>
+                    </option> -->
+                    <option value="0" data-thumbnail="https://cdn.shopify.com/s/files/1/0403/1584/6819/files/ch-flag.png?v=1591397127">Schweiz</option>
                     <option value="1">🇩🇪&emsp;Germany</option>
                     <option value="2">🇳🇱&emsp;Netherlands</option>
                     <option value="3">🇫🇷&emsp;France</option>
@@ -274,73 +275,73 @@
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">jul 2023</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">mar 2023</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">apr 2023</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">may 2023</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">jun 2023</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">jul 2023</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">aug 2023</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">sep 2023</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">oct 2023</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">nov 2023</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">dec 2023</div>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="boxes">
                     <div class="box_img"><img src="images/slide.png" alt="" class="w-100 img-fluid"></div>
-                    <div class="box_text text-white h6 mb-0 py-2">feb 2023</div>
+                    <div class="box_text text-white h6 mb-0 py-2">blank</div>
                   </div>
                 </div>
 
